# pyflashkit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
flashkit/: __init__.py  errors.py
flashkit/abc/: __init__.py  builder.py  constants.py  disasm.py  opcodes.py  parser.py  types.py  writer.py
flashkit/analysis/: __init__.py  call_graph.py  class_graph.py  complexity.py  const_args.py  dead_code.py  field_access.py  inheritance.py  liveness.py  method_fingerprint.py  references.py  strings.py  unified.py
flashkit/cli/: __init__.py  callees.py  callers.py  classes.py  decompile.py  disasm.py  extract.py  field_access.py  pool.py  refs.py  strings.py  tags.py  tree.py
flashkit/decompile/: __init__.py  _adapter.py  _helpers_full.py  cache.py  class_.py  helpers.py  method.py  patterns.py  stack.py  structure.py
flashkit/decompile/ast/: __init__.py  nodes.py  printer.py
flashkit/graph/: __init__.py  cfg.py  dominators.py  loops.py
flashkit/info/: __init__.py  class_info.py  member_info.py  package_info.py
flashkit/search/: __init__.py  search.py
flashkit/swf/: __init__.py  builder.py  parser.py  tags.py
flashkit/workspace/: __init__.py  resource.py  workspace.py
tests/: conftest.py  test_integration.py  test_public_api.py
tests/abc/: test_builder.py  test_disasm.py  test_parser.py  test_writer.py
tests/analysis/: test_call_graph.py  test_complexity.py  test_const_args.py  test_dead_code.py  test_inheritance.py  test_liveness.py  test_references.py  test_strings.py  test_type_hints.py
tests/cli/: test_cli.py
tests/decompile/: test_ast.py  test_decompile.py  test_patterns.py  test_stack.py  test_structure.py  test_structure_advanced.py
tests/graph/: test_cfg.py  test_dominators.py  test_loops.py
tests/info/: test_class_info.py  test_member_info.py
tests/search/: test_search.py
tests/swf/: test_builder.py  test_parser.py
tests/workspace/: test_workspace.py
