[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflashkit"
version = "1.3.0"
description = "SWF/ABC toolkit for parsing, analyzing, and manipulating Flash files and AVM2 bytecode"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "bitalizer"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/bitalizer/pyflashkit"
Repository = "https://github.com/bitalizer/pyflashkit"
Issues = "https://github.com/bitalizer/pyflashkit/issues"

[project.scripts]
flashkit = "flashkit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
include = ["flashkit*"]
